# code-cartographer

./: .gitignore  .mise.toml  .pre-commit-config.yaml  =0.0.290,<1.0  =2.2.0,<3.0  =3.4.0,<4.0  =3.8.0,<4.0  =4.0.0,<5.0  =7.4.0,<8.0  CLAUDE.md  CODE_WARP_HOUSE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  analyze_codebase.sh  code_analyzer_engine.py  code_variant_analyzer.py  deep_code_analyzer.py  guide.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_final.json  verify_implementation.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  publish.yml
code_cartographer/: __init__.py  __main__.py  cli.py  quickstart.py
code_cartographer/api/: __init__.py  server.py
code_cartographer/api/models/: __init__.py  schemas.py
code_cartographer/api/routes/: __init__.py  analysis.py  temporal.py
code_cartographer/api/services/: __init__.py  websocket.py
code_cartographer/core/: analyzer.py  dependency_analyzer.py  git_analyzer.py  immersive_dashboard.py  reporter.py  temporal_analyzer.py  variable_analyzer.py  variant_analyzer.py  visualizer.py
code_cartographer/web/static/: app.js  style.css
code_cartographer/web/templates/: index.html
docs/: CODE_WARP_HOUSE.md  IMMERSIVE_VISUALIZATION.md  TEMPORAL_TOPOGRAPHY.md
examples/: README.md  generate_demo_viz.py
examples/mini_repo/: README.md  __init__.py  baseline_analysis.json  config.py  data_processor.py  main.py  processor.py  utils.py
examples/output/: README.md  analysis.json  code_analysis_report.html  code_analysis_report.md
templates/: dashboard.html.j2  immersive_dashboard.html.j2
tests/: __init__.py  conftest.py  manual_functionality_test.py  test_analyzer.py  test_cli.py  test_cli_smoke.py  test_functionality.py  test_git_analyzer.py  test_quickstart.py  test_temporal_analyzer.py  test_variant_analyzer.py
tests/api/: __init__.py  test_server.py
