[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-cartographer"
version = "0.1.3"
description = "A tool for visualizing and analyzing code repositories"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Vanessa Beck" }
]
keywords = ["code", "visualization", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/stochastic-sisyphus"
Repository = "https://github.com/stochastic-sisyphus/code-cartographer"
Documentation = "https://github.com/stochastic-sisyphus/code-cartographer#readme"
"Bug Tracker" = "https://github.com/stochastic-sisyphus/code-cartographer/issues"

[tool.hatch.build.targets.wheel]
packages = ["code_cartographer"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov"
testpaths = [
    "tests",
] 