[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-cartographer"
version = "0.3.0"
description = "A tool for visualizing and analyzing code repositories"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Vanessa Beck" }
]
keywords = ["code", "visualization", "analysis", "ast", "dependencies", "refactoring"]
urls = {Homepage = "https://github.com/stochastic-sisyphus/code-cartographer", Repository = "https://github.com/stochastic-sisyphus/code-cartographer", Issues = "https://github.com/stochastic-sisyphus/code-cartographer/issues"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "nltk>=3.8.1",
    "sentence-transformers>=2.2.2",
    "gitpython>=3.1.40",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "websockets>=12.0",
    "radon>=5.1.0",
    "jinja2>=3.1.2",
    "markdown>=3.4.0",
    "matplotlib>=3.7.0",
    "networkx>=2.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "black==24.8.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/stochastic-sisyphus"
Repository = "https://github.com/stochastic-sisyphus/code-cartographer"
Documentation = "https://github.com/stochastic-sisyphus/code-cartographer#readme"
"Bug Tracker" = "https://github.com/stochastic-sisyphus/code-cartographer/issues"

[tool.hatch.build.targets.wheel]
packages = ["code_cartographer"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=code_cartographer"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 